--- a/26_10_tabbar/26_10_tabbar/Base.lproj/Main.storyboard
+++ b/26_10_tabbar/26_10_tabbar/Base.lproj/Main.storyboard
@@ -28,11 +28,10 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="us2-hv-id9">
-                                                    <rect key="frame" x="20" y="11" width="95" height="69"/>
+                                                    <rect key="frame" x="20" y="11" width="95" height="73"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="69" id="M5B-sd-GJj"/>
-                                                        <constraint firstAttribute="width" constant="95" id="YjC-Vi-Bzz"/>
-                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="95" id="ySL-Ff-3vX"/>
+                                                        <constraint firstAttribute="width" constant="95" id="oWH-cg-cHC"/>
+                                                        <constraint firstAttribute="height" constant="73" id="yky-5K-oan"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Xj-YX-rhp">
@@ -43,11 +42,11 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="5Xj-YX-rhp" firstAttribute="leading" secondItem="us2-hv-id9" secondAttribute="trailing" constant="12" id="ERk-fa-wuJ"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="us2-hv-id9" secondAttribute="bottom" constant="4" id="RB4-ni-vMQ"/>
-                                                <constraint firstItem="us2-hv-id9" firstAttribute="leading" secondItem="ST3-ls-K58" secondAttribute="leadingMargin" id="UdF-PL-Kdq"/>
+                                                <constraint firstItem="us2-hv-id9" firstAttribute="bottom" secondItem="ST3-ls-K58" secondAttribute="bottomMargin" id="CYD-A1-q4B"/>
+                                                <constraint firstItem="5Xj-YX-rhp" firstAttribute="leading" secondItem="us2-hv-id9" secondAttribute="trailing" constant="12" id="HU7-Wg-gXi"/>
                                                 <constraint firstItem="5Xj-YX-rhp" firstAttribute="top" secondItem="ST3-ls-K58" secondAttribute="topMargin" constant="13" id="evn-fB-qbI"/>
-                                                <constraint firstItem="us2-hv-id9" firstAttribute="top" secondItem="ST3-ls-K58" secondAttribute="topMargin" id="j1h-P7-a8U"/>
+                                                <constraint firstItem="us2-hv-id9" firstAttribute="top" secondItem="ST3-ls-K58" secondAttribute="topMargin" id="fab-Ad-yKx"/>
+                                                <constraint firstItem="us2-hv-id9" firstAttribute="leading" secondItem="ST3-ls-K58" secondAttribute="leadingMargin" id="x1a-Pr-EaR"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
